--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h1>Search Github Users</h1>
             <p class="lead">Enter a username to fetch a user profile and repos</p>
 
-            <input type="text" id="userIn" class="form-control" placeholder="Github Username">
-            <button class="btn-primary w-10 mt-3" id="searchUser">submit</button>
+            <input type="search" id="userIn" class="form-control" placeholder="Github Username">
+            <button class="btn-primary w-10 mt-3" id="searchUser">search</button>
         </div>
         <br>
         <div id="profile"></div>
